add products html for desktop

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   <include src="./partials/advantages.html"></include>
   <include src="./partials/contacts.html"></include>
   <include src="./partials/customer-rewiews.html"></include>
-  <include src="./partials/footer"></include>
+  <!-- <include src="./partials/footer"></include> -->
   <include src="./partials/gallery.html"></include>
   <include src="./partials/hero.html"></include>
   <include src="./partials/header.html"></include>
