--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
   <include src="./partials/hero.html"></include>
   <include src="./partials/products.html"></include>
   <include src="./partials/about.html"></include>
-  <include src="./partials/advantages.html"></include>
+  <include src="./partials/information.html"></include>
   <include src="./partials/gallery.html"></include>
   <include src="./partials/customer-reviews.html"></include>
   <include src="./partials/contacts.html"></include>
